Finished FastAPI and Docker config

--- a/technical_report.ipynb
+++ b/technical_report.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "745b0796",
    "metadata": {},
    "outputs": [
@@ -336,15 +336,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11635c87",
+   "metadata": {},
+   "source": [
+    "## Deployment & Containerization\n",
+    "The project was containerized using Docker, allowing for easy deployment and scalability. The Dockerfile is structured to install necessary dependencies, copy project files, and set up the environment for running a FastAPI application. The Dockerfile can be found in the main directory along with its corresponding .dockerignore file to exclude unnecessary files from the container build context.\n",
+    "\n",
+    "The FastAPI application serves as the interface for interacting with the deployed models, allowing users to send requests with input data and receive predictions in response. The application is designed to handle both 24-hour and 48-hour prediction requests, providing flexibility for users based on their specific needs, and its contained in the `src/app.py` file.For the deployment test, the application was run on the local machine, and given a very small (48h) sample input data to verify the functionality of the API. \n",
+    "\n",
+    "### Example API Request\n",
+    "\n",
+    "```bash\n",
+    "\n",
+    "curl -X POST \"http://localhost:8000/predict/RF_48h\" -H \"Content-Type: multipart/form-data\" -F \"file=@input_data.csv\"\n",
+    "{\"predictions\":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "With this test, I was able to confirm that the models were correctly loaded and that predictions were being generated as expected. The test also helped identify the flaw with the models being trained on balanced data, which led to all predictions being 0 (no failure) in the deployment test. \n",
+    "\n",
+    "This highlighted the need for further refinement of the models and their training process, to ensure they can effectively handle real-world data distributions. While the 24h models seem to be overfitting, the 48h models seem to be need larger datasets to be able to generalize better. This can be attributed to the fact that the feature engineering used big and diverse time windows, which may not be as effective for shorter-term predictions, causing data leakage and overfitting. Its also importat to note that the test input data was manufacture to have no information about previous errors, maintenance and failures, which is not the case in real world scenarios, where this information is usually available, unless its a new machine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "063f9b13",
    "metadata": {},
    "source": [
     "## Conclusion\n",
     "In conclusion, the Microsoft Azure Predictive Maintenance project successfully developed and deployed predictive models for machine failure prediction. The models demonstrated strong performance metrics, particularly in terms of recall, which is critical for minimizing false negatives in predictive maintenance scenarios. The best-performing models were the random forest models for both 24-hour and 48-hour predictions, with the 24-hour models showing slightly better performance overall. Although the models showed some signs of overfitting, they were still able to generalize well to unseen data, indicating their robustness and reliability for practical applications.\n",
     "\n",
-    "Thus, I would recommend the use of a 48-hour prediction model, as it provides a good balance between prediction accuracy and the time available to act on potential failures. This longer prediction horizon allows for more proactive maintenance actions, which can lead to reduced downtime and costs associated with machine failures. However, it is important to consider the specific operational constraints and requirements of the use case when selecting the appropriate model and prediction horizon.\n",
+    "Thus, I would recommend the use of a 48-hour prediction model, as it provides a good balance between prediction accuracy and the time available to act on potential failures. This longer prediction horizon allows for more proactive maintenance actions, which can lead to reduced downtime and costs associated with machine failures. However, it is important to consider the specific operational constraints and requirements of the use case when selecting the appropriate model and prediction horizon. And this model need a robust and extensive dataset to avoid overfitting, data leakage and generalize well.\n",
     "\n",
-    "For future work, it would be beneficial to explore additional features and data sources that could further improve the models' performance, as well as to investigate the potential for real-time monitoring and prediction capabilities. Additionally, conducting a cost-benefit analysis of the predictive maintenance actions based on the model predictions could provide valuable insights into the economic impact of implementing such systems in practice."
+    "For future work, it would be beneficial to explore additional features and data sources that could further improve the models' performance, as well as to investigate the potential for real-time monitoring and prediction capabilities. Additionally, conducting a cost-benefit analysis of the predictive maintenance actions based on the model predictions could provide valuable insights into the economic impact of implementing such systems in practice.\n",
+    "\n",
+    "The deployment process still needs to be refined, as the models need to be trained on more representative data, and the API needs to be tested with more realistic input data that reflects real-world scenarios. Also, the model needs a more robust aproach to handle imbalanced data, as well as smaller time windows for feature engineering, to avoid overfitting and data leakage."
    ]
   }
  ],
