Erratas app.py and documentation

--- a/technical_design.ipynb
+++ b/technical_design.ipynb
@@ -30,7 +30,8 @@
     "4. [Feature Engineering](#4-feature-engineering)\n",
     "5. [Model Training](#5-model-training)\n",
     "6. [Model Evaluation](#6-model-evaluation)\n",
-    "7. [Evaluation Summary and Reporting](#7-evaluation-summary-and-reporting)"
+    "7. [Evaluation Summary and Reporting](#7-evaluation-summary-and-reporting)\n",
+    "8. [Deployment and Containerization](#8-deployment-and-containerization)"
    ]
   },
   {
@@ -197,6 +198,43 @@
    "source": [
     "## 7. Evaluation Summary and Reporting\n",
     "This step involves summarizing the results of the model evaluation and generating a report that includes the key findings, insights, and recommendations. This step is performed in the `technical_report.ipynb` notebook. Key metrics will be saved as a CSV in the main repository for easy access and sharing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aa8b2dc",
+   "metadata": {},
+   "source": [
+    "## 8. Deployment and Containerization\n",
+    "The final step is to deploy the trained model as a REST API using FastAPI. This allows users to make predictions by sending requests to the API with input data. The deployment process involves creating an API endpoint that accepts input data, processes it, and returns predictions based on the trained model. This step is performed in the `src/app.py` script.\n",
+    "\n",
+    "For deployment, the FastAPI application is containerized using Docker. The Dockerfile is provided in the `src` directory, which contains the necessary instructions to build the Docker image for the FastAPI application, which can be done with the following command:\n",
+    "\n",
+    "```bash\n",
+    "# Build the Docker image for the FastAPI application\n",
+    "docker build -t predictive-maintenance\n",
+    "\n",
+    "# Run the Docker container for the FastAPI application\n",
+    "docker run -p 8000:8000 predictive-maintenance\n",
+    "\n",
+    "```\n",
+    "For testing the deployment the following code snippet was used to run the FastAPI application locally:\n",
+    "\n",
+    "```bash\n",
+    "# Run the FastAPI application locally\n",
+    "uvicorn src.app:app --port 8000\n",
+    "```\n",
+    "This API expects a POST request with a file containing the input data in CSV format. The input data should have a similar structure to the raw data containing a `datetime`, `machine_id`, `model`, `age` columns and the sensor readings columns (voltage, rotation, pressure, vibration) for the machines, named as such. This can be done by merging the `telemetry.csv` and `machines.csv` raw files from the data set. The request should be made to the `/predict/{model_name}` endpoint, where `{model_name}` is the name of the model to be used for predictions `LR_48h` `RF_48h` `LR_24h` `RF_48h` (e.g., `RF_48h` for the Random Forest model predicting failures in 48 hours).\n",
+    "\n",
+    "A test input was created, and the following code snippet can be used to test the deployment:\n",
+    "\n",
+    "```bash\n",
+    "# Example API request to test the deployment\n",
+    "curl -X POST \"http://localhost:8000/predict/RF_48h\" -H \"Content-Type: multipart/form-data\" -F \"file=@input_data.csv\"\n",
+    "\n",
+    "# Expected Output Structure\n",
+    "{\"predictions\":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]}\n",
+    "```\n"
    ]
   }
  ],
