--- a/technical_report.ipynb
+++ b/technical_report.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "745b0796",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "7   214  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,8 +347,10 @@
     "### Example API Request\n",
     "\n",
     "```bash\n",
-    "\n",
+    "# Example API request to test the deployment\n",
     "curl -X POST \"http://localhost:8000/predict/RF_48h\" -H \"Content-Type: multipart/form-data\" -F \"file=@input_data.csv\"\n",
+    "\n",
+    "# Output:\n",
     "{\"predictions\":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]}\n",
     "\n",
     "```\n",
